--- a/sigil-test/Project1/Project1.vcxproj
+++ b/sigil-test/Project1/Project1.vcxproj
@@ -132,6 +132,7 @@
   <ItemGroup>
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Breakout.cpp" />
+    <ClCompile Include="ColorManager.cpp" />
     <ClCompile Include="GameplayScene.cpp" />
     <ClCompile Include="KeyManager.cpp" />
     <ClCompile Include="main.cpp" />
@@ -142,6 +143,7 @@
   <ItemGroup>
     <ClInclude Include="Ball.h" />
     <ClInclude Include="Breakout.h" />
+    <ClInclude Include="ColorManager.h" />
     <ClInclude Include="Utils.h" />
     <ClInclude Include="GameplayScene.h" />
     <ClInclude Include="KeyManager.h" />
