--- a/sigil-test/Project1/Project1.vcxproj.filters
+++ b/sigil-test/Project1/Project1.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="ColorManager.cpp">
       <Filter>Archivos de origen\Objects</Filter>
     </ClCompile>
+    <ClCompile Include="Block.cpp">
+      <Filter>Archivos de origen\Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ball.h">
@@ -68,7 +71,7 @@
     <ClInclude Include="KeyManager.h">
       <Filter>Archivos de encabezado\Objects</Filter>
     </ClInclude>
-    <ClInclude Include="Rect.h">
+    <ClInclude Include="Paddle.h">
       <Filter>Archivos de encabezado\Objects</Filter>
     </ClInclude>
     <ClInclude Include="GameplayScene.h">
@@ -79,6 +82,9 @@
     </ClInclude>
     <ClInclude Include="SceneManager.h">
       <Filter>Archivos de encabezado\Scenes</Filter>
+    </ClInclude>
+    <ClInclude Include="Block.h">
+      <Filter>Archivos de encabezado\Objects</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
