Added loose condition and win contidion as well as the result scene and the ui manager

--- a/breakout/Project1/Project1.vcxproj
+++ b/breakout/Project1/Project1.vcxproj
@@ -28,8 +28,10 @@
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\Player.cpp" />
     <ClCompile Include="..\src\Rect.cpp" />
+    <ClCompile Include="..\src\ResultScene.cpp" />
     <ClCompile Include="..\src\SceneManager.cpp" />
     <ClCompile Include="..\src\Utils.cpp" />
+    <ClCompile Include="UIManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\Ball.h" />
@@ -40,8 +42,10 @@
     <ClInclude Include="..\src\KeyManager.h" />
     <ClInclude Include="..\src\Paddle.h" />
     <ClInclude Include="..\src\Player.h" />
+    <ClInclude Include="..\src\ResultScene.h" />
     <ClInclude Include="..\src\SceneManager.h" />
     <ClInclude Include="..\src\Utils.h" />
+    <ClInclude Include="UIManager.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
