--- a/breakout/Project1/Project1.vcxproj.filters
+++ b/breakout/Project1/Project1.vcxproj.filters
@@ -63,7 +63,7 @@
     <ClCompile Include="..\src\ResultScene.cpp">
       <Filter>Archivos de origen\Scenes</Filter>
     </ClCompile>
-    <ClCompile Include="UIManager.cpp">
+    <ClCompile Include="..\src\UIManager.cpp">
       <Filter>Archivos de origen\Objects</Filter>
     </ClCompile>
   </ItemGroup>
@@ -101,7 +101,7 @@
     <ClInclude Include="..\src\ResultScene.h">
       <Filter>Archivos de encabezado\Scenes</Filter>
     </ClInclude>
-    <ClInclude Include="UIManager.h">
+    <ClInclude Include="..\src\UIManager.h">
       <Filter>Archivos de encabezado\Objects</Filter>
     </ClInclude>
   </ItemGroup>
