made the necessary adjustments to put the project files and the solution files in the same directory

--- a/breakout/breakbacks.vcxproj
+++ b/breakout/breakbacks.vcxproj
@@ -19,19 +19,19 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\Ball.cpp" />
-    <ClCompile Include="..\src\Block.cpp" />
-    <ClCompile Include="..\src\Breakout.cpp" />
-    <ClCompile Include="..\src\ColorManager.cpp" />
-    <ClCompile Include="..\src\GameplayScene.cpp" />
-    <ClCompile Include="..\src\KeyManager.cpp" />
-    <ClCompile Include="..\src\main.cpp" />
-    <ClCompile Include="..\src\Player.cpp" />
-    <ClCompile Include="..\src\Paddle.cpp" />
-    <ClCompile Include="..\src\ResultScene.cpp" />
-    <ClCompile Include="..\src\SceneManager.cpp" />
-    <ClCompile Include="..\src\UIManager.cpp" />
-    <ClCompile Include="..\src\Utils.cpp" />
+    <ClCompile Include="src\Ball.cpp" />
+    <ClCompile Include="src\Block.cpp" />
+    <ClCompile Include="src\Breakout.cpp" />
+    <ClCompile Include="src\ColorManager.cpp" />
+    <ClCompile Include="src\GameplayScene.cpp" />
+    <ClCompile Include="src\KeyManager.cpp" />
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Paddle.cpp" />
+    <ClCompile Include="src\Player.cpp" />
+    <ClCompile Include="src\ResultScene.cpp" />
+    <ClCompile Include="src\SceneManager.cpp" />
+    <ClCompile Include="src\UIManager.cpp" />
+    <ClCompile Include="src\Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\Ball.h" />
