--- a/breakout/breakbacks.vcxproj
+++ b/breakout/breakbacks.vcxproj
@@ -19,6 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="MenuScene.cpp" />
+    <ClCompile Include="RulesScene.cpp" />
     <ClCompile Include="src\Ball.cpp" />
     <ClCompile Include="src\Block.cpp" />
     <ClCompile Include="src\Breakout.cpp" />
@@ -34,6 +36,8 @@
     <ClCompile Include="src\Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="MenuScene.h" />
+    <ClInclude Include="RulesScene.h" />
     <ClInclude Include="src\Ball.h" />
     <ClInclude Include="src\Block.h" />
     <ClInclude Include="src\Breakout.h" />
