--- a/breakout/breakbacks.vcxproj
+++ b/breakout/breakbacks.vcxproj
@@ -19,8 +19,6 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MenuScene.cpp" />
-    <ClCompile Include="RulesScene.cpp" />
     <ClCompile Include="src\Ball.cpp" />
     <ClCompile Include="src\Block.cpp" />
     <ClCompile Include="src\Breakout.cpp" />
@@ -28,25 +26,27 @@
     <ClCompile Include="src\GameplayScene.cpp" />
     <ClCompile Include="src\KeyManager.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\MenuScene.cpp" />
     <ClCompile Include="src\Paddle.cpp" />
     <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\ResultScene.cpp" />
+    <ClCompile Include="src\RulesScene.cpp" />
     <ClCompile Include="src\SceneManager.cpp" />
     <ClCompile Include="src\UIManager.cpp" />
     <ClCompile Include="src\Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MenuScene.h" />
-    <ClInclude Include="RulesScene.h" />
     <ClInclude Include="src\Ball.h" />
     <ClInclude Include="src\Block.h" />
     <ClInclude Include="src\Breakout.h" />
     <ClInclude Include="src\ColorManager.h" />
     <ClInclude Include="src\GameplayScene.h" />
     <ClInclude Include="src\KeyManager.h" />
+    <ClInclude Include="src\MenuScene.h" />
     <ClInclude Include="src\Paddle.h" />
     <ClInclude Include="src\Player.h" />
     <ClInclude Include="src\ResultScene.h" />
+    <ClInclude Include="src\RulesScene.h" />
     <ClInclude Include="src\SceneManager.h" />
     <ClInclude Include="src\UIManager.h" />
     <ClInclude Include="src\Utils.h" />
