--- a/breakout/breakbacks.vcxproj.filters
+++ b/breakout/breakbacks.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="src\MenuScene.cpp">
       <Filter>Archivos de origen\Scenes</Filter>
     </ClCompile>
+    <ClCompile Include="src\PauseMenu.cpp">
+      <Filter>Archivos de origen\Scenes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\ResultScene.h">
@@ -114,6 +117,9 @@
       <Filter>Archivos de encabezado\Scenes</Filter>
     </ClInclude>
     <ClInclude Include="src\MenuScene.h">
+      <Filter>Archivos de encabezado\Scenes</Filter>
+    </ClInclude>
+    <ClInclude Include="src\PauseMenu.h">
       <Filter>Archivos de encabezado\Scenes</Filter>
     </ClInclude>
   </ItemGroup>
